--- a/TheBookHaven/MainWindow.xaml
+++ b/TheBookHaven/MainWindow.xaml
@@ -3,17 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TheBookHaven" xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+        xmlns:local="clr-namespace:TheBookHaven" 
+        xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp" 
+        xmlns:views="clr-namespace:TheBookHaven.Views" 
+        xmlns:viewmodel="clr-namespace:TheBookHaven.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="480" Width="800">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter" />
     </Window.Resources>
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="2*" />
-        </Grid.ColumnDefinitions>
+
+        <views:WelcomeView Visibility="{Binding IsWelcomeView, Converter={StaticResource boolToVisibilityConverter}}" />
+
+        <Grid 
+            Visibility="{Binding IsMainView, Converter={StaticResource boolToVisibilityConverter}}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+
         <TextBlock Text="Bookstores"
                        Height="25"
                        Width="150"
@@ -22,11 +31,15 @@
                        HorizontalAlignment="Left"
                        VerticalAlignment="Top"
                        Margin="15"/>
-        <ListBox Grid.Column="0"
+            <ListBox Grid.Column="0"
                     Height="350"
                     Margin="7,50,3,34"
-                    SelectionMode="Single">
-        </ListBox>
+                    SelectionMode="Single"
+
+                    SelectedItem="" >
+                <TextBlock 
+                    Text=""/>
+            </ListBox>
 
         <Button x:Name="AddButton"
                     Grid.Column="1"
@@ -68,5 +81,6 @@
                                         Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
+        </Grid>
     </Grid>
 </Window>
