--- a/TheBookHaven/Views/WelcomeView.xaml
+++ b/TheBookHaven/Views/WelcomeView.xaml
@@ -3,9 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TheBookHaven.Views"
+             xmlns:local="clr-namespace:TheBookHaven.Views" 
+             xmlns:viewmodel="clr-namespace:TheBookHaven.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="480" d:DesignWidth="800"
              Background="Bisque">
              
     <Grid>
@@ -21,6 +22,7 @@
                FontFamily="Baskerville Old Face" Foreground="#FF2D3135"/>
 
         <Button Content="Enter Here"
+                Command="{Binding EnterTheBookHavenCommand}"
                 Grid.Row="1"
                 Height="70"
                 Width="120"
