--- a/TheBookHaven/MainWindow.xaml
+++ b/TheBookHaven/MainWindow.xaml
@@ -6,13 +6,17 @@
         xmlns:local="clr-namespace:TheBookHaven" 
         xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp" 
         xmlns:views="clr-namespace:TheBookHaven.Views" 
-        xmlns:viewmodel="clr-namespace:TheBookHaven.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
+        xmlns:viewmodel="clr-namespace:TheBookHaven.ViewModel" 
+        xmlns:converters="clr-namespace:TheBookHaven.Converters" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="480" Width="800">
+        Title="The Book Haven" Height="480" Width="800">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter" />
     </Window.Resources>
     <Grid>
+        <Grid.Resources>
+            <converters:NullToBoolConverter x:Key="NullToBoolConverter" />
+        </Grid.Resources>
 
         <views:WelcomeView Visibility="{Binding IsWelcomeView, Converter={StaticResource boolToVisibilityConverter}}" />
 
@@ -35,50 +39,65 @@
                     Height="350"
                     Margin="7,50,3,34"
                     SelectionMode="Single"
-
-                    SelectedItem="" >
-                <TextBlock 
-                    Text=""/>
+                    ItemsSource="{Binding BookStores}"
+                    SelectedItem="{Binding SelectedStore, Mode=TwoWay}" >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
 
         <Button x:Name="AddButton"
-                    Grid.Column="1"
-                    Height="40"
-                    Width="40"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    Margin="212,5,0,5">
+                Grid.Column="1"
+                Height="40"
+                Width="40"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="212,5,0,5"
+                Command="{Binding SelectedStockItem.AddToStockCommand}"
+                IsEnabled="{Binding SelectedStockItem, Converter={StaticResource NullToBoolConverter}}">
             <Button.Content>
                 <fa:IconBlock Icon="HeartCirclePlus" />
             </Button.Content>
         </Button>
 
         <Button x:Name="RemoveButton"
-                    Grid.Column="1"
-                    Height="40"
-                    Width="40"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
-                    Margin="287,5,0,5">
+                Grid.Column="1"
+                Height="40"
+                Width="40"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="287,5,0,5"
+                Command="{Binding SelectedStockItem.RemoveFromStockCommand}"
+                IsEnabled="{Binding SelectedStockItem, Converter={StaticResource NullToBoolConverter}}">
             <Button.Content>
                 <fa:IconBlock Icon="HeartCircleMinus" />
             </Button.Content>
         </Button>
 
         <DataGrid Grid.Column="1"
-                      Height="350"
-                      Margin="2,50,2,34">
+                    Height="350"
+                    Margin="2,50,2,34"
+                    ItemsSource="{Binding StockItems}"
+                  SelectedItem="{Binding SelectedStockItem, Mode=TwoWay}"
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Title" 
-                                        Width="*"/>
+                                    Width="*"
+                                    Binding="{Binding Title}"/>
                 <DataGridTextColumn Header="ISBN" 
-                                        Width="*"/>
+                                    Width="*"
+                                    Binding="{Binding Isbn}"/>
                 <DataGridTextColumn Header="Author" 
-                                        Width="*"/>
+                                    Width="*"
+                                    Binding="{Binding Author}"/>
                 <DataGridTextColumn Header="Price" 
-                                        Width="*"/>
+                                    Width="*"
+                                    Binding="{Binding Price}"/>
                 <DataGridTextColumn Header="Stockbalance" 
-                                        Width="*"/>
+                                    Width="*"
+                                    Binding="{Binding StockBalance}"/>
             </DataGrid.Columns>
         </DataGrid>
         </Grid>
